--- a/src/app/pages/setting/term-conditions/term-conditions.page.html
+++ b/src/app/pages/setting/term-conditions/term-conditions.page.html
@@ -1,13 +1,20 @@
 
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <ion-toolbar>
       <ion-buttons slot="start">
         <ion-back-button defaultHref="/apptabs/tabs/setting"></ion-back-button>
       </ion-buttons>
       <ion-title class="ion-text-justify">Terms & Conditions</ion-title>
   </ion-toolbar>
+</ion-header> -->
+<ion-header class="ion-no-border" style="border-bottom: 2px solid #000000; ">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center" >Product Details</ion-title>
+  </ion-toolbar>
 </ion-header>
-
 <ion-content class="ion-padding">
   <p>
     A mobile app terms and conditions agreement is a powerful solution to help
