--- a/src/app/auth-pages/login/login.page.html
+++ b/src/app/auth-pages/login/login.page.html
@@ -11,29 +11,33 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <form>
+  <form [formGroup]="signupForm">
     <ion-label>Registered Email</ion-label>
     <ion-item lines="full" class="ion-margin-top">
-      <ion-input type="email" name="email" required placeholder="enter your email"></ion-input>
+      <ion-input type="email" formControlName="email" name="email" required placeholder="enter your email"></ion-input>
     </ion-item>
-    
+    <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">
+      <p class="error">*Please enter proper Email Address</p>
+    </ion-text>
     <ion-label>Password</ion-label>
     <ion-item lines="full" class="ion-margin-top">
-      <ion-input type="password" name="password" required placeholder="enter your password"></ion-input>
+      <ion-input formControlName="password" type="password" name="password" required placeholder="enter your password"></ion-input>
       <ion-icon name="eye" slot="end" ></ion-icon>
     </ion-item>
+    <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">
+      <p class="error" *ngIf="signupForm.get('password').invalid && signupForm.get('password').errors?.['required']">Please enter your Password</p>
+    </ion-text>
       <ion-row>
         <ion-col>
             <ion-button fill="clear" size="small" ><ion-checkbox slot="start"></ion-checkbox>Remember me</ion-button>
         </ion-col>
-  
-          <ion-button fill="clear" style="float: right;" size="small" class="forgot-password-button" routerLink="/forgot-password">Forgot Password?</ion-button>
+               <ion-button fill="clear" style="float: right;" size="small" class="forgot-password-button" routerLink="/forgot-password">Forgot Password?</ion-button>
        
       </ion-row>
     <ion-grid class="signin-button-grid">
       <ion-row class="ion-margin-top">
         <ion-col>
-          <ion-button class="get-started-button" routerLink="/apptabs/tabs/home">
+          <ion-button class="get-started-button"  (click)="onSubmit()">
             <span>Sign In</span>
             <div class="lines"></div>
             <div>
