--- a/src/app/pages/setting/about/about.page.html
+++ b/src/app/pages/setting/about/about.page.html
@@ -9,15 +9,22 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <ion-toolbar>
       <ion-buttons slot="start">
         <ion-back-button routerLink="/apptabs/tabs/setting"></ion-back-button>
       </ion-buttons>
       <ion-title class="ion-text-justify">About Dammanati</ion-title>
   </ion-toolbar>
+</ion-header> -->
+<ion-header class="ion-no-border" style="border-bottom: 2px solid #000000; ">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center" >Product Details</ion-title>
+  </ion-toolbar>
 </ion-header>
-
 <ion-content class="ion-padding">
   <p>
     <strong class="dammanati1">DAMAANATI</strong> is your trusted bilingual
