--- a/src/app/pages/setting/privacy-policy/privacy-policy.page.html
+++ b/src/app/pages/setting/privacy-policy/privacy-policy.page.html
@@ -8,15 +8,22 @@
     <ion-title>Privacy Policy</ion-title>
   </ion-toolbar>
 </ion-header> -->
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <ion-toolbar>
       <ion-buttons slot="start">
         <ion-back-button routerLink="/apptabs/tabs/setting"></ion-back-button>
       </ion-buttons>
       <ion-title class="ion-text-justify">Privacy Policy</ion-title>
   </ion-toolbar>
+</ion-header> -->
+<ion-header class="ion-no-border" style="border-bottom: 2px solid #000000; ">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center" >Product Details</ion-title>
+  </ion-toolbar>
 </ion-header>
-
 <ion-content class="ion-padding">
   <p>
     A <strong>Privacy Policy</strong> is a legal document that informs the
