--- a/src/app/pages/setting/setting.page.html
+++ b/src/app/pages/setting/setting.page.html
@@ -40,7 +40,7 @@
       <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
     </ion-item>
   </ion-list>
-  <ion-item lines="none" class="ion-margin-top">
+  <ion-item lines="none" class="ion-margin-top" routerLink="/login">
     <ion-icon slot="end" name="exit-outline" slot="start" class="sign-out-label"></ion-icon>
     <ion-label class="sign-out-label">Sign Out</ion-label>
   </ion-item>
