--- a/src/app/auth-pages/login/login.page.html
+++ b/src/app/auth-pages/login/login.page.html
@@ -29,7 +29,7 @@
     </ion-text>
       <ion-row>
         <ion-col>
-            <ion-button fill="clear" size="small" ><ion-checkbox slot="start"></ion-checkbox>Remember me</ion-button>
+            <ion-button fill="clear" size="small" ><ion-checkbox slot="start"></ion-checkbox> &nbsp; Remember me</ion-button>
         </ion-col>
                <ion-button fill="clear" style="float: right;" size="small" class="forgot-password-button" routerLink="/forgot-password">Forgot Password?</ion-button>
        
