--- a/src/app/auth-pages/welcome-screen/welcome-screen.page.html
+++ b/src/app/auth-pages/welcome-screen/welcome-screen.page.html
@@ -1,8 +1,8 @@
 <ion-content >
-  <swiper-container [options]="swiperConfig" class="swiper-container">
+  <swiper-container [options]="swiperConfig" class="swiper-container" >
     <swiper-slide>
       <ion-grid>
-        <ion-row>
+        <ion-row style="margin-top: 14%;">
           <ion-col>
             <ion-img loading="lazy" alt="" src="assets/frame-9@2x.png"></ion-img>
           </ion-col>
