--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
       <ion-button routerLink="/profile">
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-button>
-      <ion-button routerLink="/reminders">
+      <ion-button>
         <ion-icon name="notifications-outline"></ion-icon>
         <ion-badge color="danger"></ion-badge>
       </ion-button>
