initial or first push

--- a/src/app/auth-pages/forgot-password/forgot-password.page.html
+++ b/src/app/auth-pages/forgot-password/forgot-password.page.html
@@ -5,7 +5,7 @@
         <ion-back-button defaultHref="/"></ion-back-button>
       </ion-col>
       <ion-col class="ion-text-center" size="10">
-        <h2>Forgot Password</h2>
+        <h2>{{ 'FORGOT_PASSWORD' | translate }}</h2>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -22,25 +22,25 @@
     <ion-row>
     <ion-col class="ion-text-center ion-margin-top">
       <ion-text>
-        Please Enter Your Email Address To
-        Recieve a Verification Code
+        <ion-label>{{ 'REGISTERED_EMAIL' | translate }}</ion-label>
+        {{ 'ENTER_EMAIL_VERIFICATION_CODE' | translate }}
       </ion-text>
     </ion-col>
     </ion-row>
 
-  <form>
+    <form [formGroup]="signupForm">
     <ion-grid class="signin-button-grid">
-      <ion-label>Registered Email</ion-label>
+      <ion-label>{{ 'REGISTERED_EMAIL' | translate }}</ion-label>
       <ion-item lines="full" class="ion-margin-top">
-        <ion-input type="email" name="email" required placeholder="enter your email"></ion-input>
+        <ion-input type="email" name="email" required placeholder="Enter Your Email" formControlName="email"></ion-input>
       </ion-item>
     
     </ion-grid>
 
     <ion-row class="ion-margin-bottom">
       <ion-col>
-        <ion-button class="get-started-button" routerLink="/verify-email">
-          <span>Send</span>
+        <ion-button class="get-started-button" routerLink="/verify-email" (click)="onSubmit()">
+          <span>{{ 'SEND' | translate }}</span>
           <div class="lines"></div>
           <div>
             <ion-icon name="arrow-forward"></ion-icon>
