--- a/src/app/auth-pages/reset-password/reset-password.page.html
+++ b/src/app/auth-pages/reset-password/reset-password.page.html
@@ -5,7 +5,9 @@
         <ion-back-button routerLink="/signup"></ion-back-button>
       </ion-col>
       <ion-col class="ion-text-center" size="10">
-        <h2>Create New Password</h2>
+        <h2>
+          {{ 'CREATE_NEW_PASSWORD' | translate }}
+        </h2>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -19,23 +21,22 @@
       </div>
     </ion-col>
   </ion-row>
-   
+  
     <ion-row>
     <ion-col class="ion-text-center ion-margin-top">
       <ion-text>
-        Your New Password Must Be Different
-        From Previously Used Password
+        {{ 'NEW_PASSWORD_MUST_BE_DIFFERENT' | translate }}
       </ion-text>
     </ion-col>
     </ion-row>
 
-  <form>
+  <!-- <form>
     <ion-grid class="signin-button-grid">
-      <ion-label>New Password</ion-label>
+      <ion-label>{{ 'NEW_PASSWORD' | translate }}</ion-label>
       <ion-item lines="full" class="ion-margin-top">
         <ion-input type="email" name="password" required placeholder="enter your new password"></ion-input>
       </ion-item>
-      <ion-label>Confirm Password</ion-label>
+      <ion-label>{{ 'CONFIRM_PASSWORD' | translate }}</ion-label>
       <ion-item lines="full" class="ion-margin-top">
         <ion-input type="email" name="confirm_password" required placeholder="enter your confirm password"></ion-input>
       </ion-item>
@@ -45,7 +46,32 @@
     <ion-row class="ion-margin-bottom">
       <ion-col>
         <ion-button class="get-started-button">
-          <span>Save</span>
+          <span>{{ 'SAVE' | translate }}</span>
+          <div class="lines"></div>
+          <div>
+            <ion-icon name="arrow-forward"></ion-icon>
+          </div>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    <hr class="hr2"/>
+  </form> -->
+
+  <form [formGroup]="signupForm">
+    <ion-grid class="signin-button-grid">
+      <ion-label>{{ 'NEW_PASSWORD' | translate }}</ion-label>
+      <ion-item lines="full" class="ion-margin-top">
+        <ion-input type="email" formControlName="new_password" name="new_password" required placeholder="enter your new password"></ion-input>
+      </ion-item>
+      <ion-label>{{ 'CONFIRM_PASSWORD' | translate }}</ion-label>
+      <ion-item lines="full" class="ion-margin-top">
+        <ion-input type="email" formControlName="confirm_password" name="confirm_password" required placeholder="enter your confirm password"></ion-input>
+      </ion-item>
+     </ion-grid>
+     <ion-row class="ion-margin-bottom">
+      <ion-col>
+        <ion-button class="get-started-button"  (click)="onSubmit()">
+          <span>{{ 'SAVE' | translate }}</span>
           <div class="lines"></div>
           <div>
             <ion-icon name="arrow-forward"></ion-icon>
