--- a/src/app/auth-pages/login/login.page.html
+++ b/src/app/auth-pages/login/login.page.html
@@ -2,43 +2,48 @@
   <ion-grid class="ion-margin-bottom">
     <ion-row>
       <ion-col size="4">
-          <ion-button  fill="clear" style="color: white;" routerLink="/signup">
+          <ion-button fill="clear" style="color: white;" routerLink="/select-language">
             <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
           </ion-button>
       </ion-col>
       <ion-col size="8">
-        <h1>Sign In</h1>
+        <h1>{{ 'SIGN_IN' | translate }}</h1>
       </ion-col>
     </ion-row>
   </ion-grid>
   <form [formGroup]="signupForm">
-    <ion-label>Registered Email</ion-label>
+    <ion-label>{{ 'REGISTERED_EMAIL' | translate }}</ion-label>
     <ion-item lines="full" class="ion-margin-top">
-      <ion-input type="email" formControlName="email" name="email" required placeholder="enter your email"></ion-input>
+      <ion-input type="email" formControlName="email" name="email" required placeholder="Enter Your Email"></ion-input>
     </ion-item>
     <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">
-      <p class="error">*Please enter proper Email Address</p>
+      <p class="error">{{ 'ENTER_PROPER_EMAIL' | translate }}</p>
     </ion-text>
-    <ion-label>Password</ion-label>
+    <ion-label>{{ 'PASSWORD' | translate }}</ion-label>
+
     <ion-item lines="full" class="ion-margin-top">
-      <ion-input formControlName="password" type="password" name="password" required placeholder="enter your password"></ion-input>
-      <ion-icon name="eye" slot="end" ></ion-icon>
+      <ion-icon (click)="onChange()" [name]="isTypePassword ? 'eye-outline' : 'eye-off-outline'" slot="end"
+        [color]="isTypePassword ? 'medium' : 'primary'"></ion-icon>
+      <ion-input formControlName="password" [type]="isTypePassword ? 'password' : 'text'"
+        placeholder="Enter Password"></ion-input>
+
     </ion-item>
+
     <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">
-      <p class="error" *ngIf="signupForm.get('password').invalid && signupForm.get('password').errors?.['required']">Please enter your Password</p>
+      <p class="error" *ngIf="signupForm.get('password').invalid && signupForm.get('password').errors?.['required']">{{ 'ENTER_PASSWORD' | translate }}</p>
     </ion-text>
       <ion-row>
         <ion-col>
-            <ion-button fill="clear" size="small" ><ion-checkbox slot="start"></ion-checkbox> &nbsp; Remember me</ion-button>
+            <ion-button fill="clear" size="small" ><ion-checkbox slot="start"></ion-checkbox> &nbsp; {{ 'REMEMBER_ME' | translate }}</ion-button>
         </ion-col>
-               <ion-button fill="clear" style="float: right;" size="small" class="forgot-password-button" routerLink="/forgot-password">Forgot Password?</ion-button>
+               <ion-button fill="clear" style="float: right;" size="small" class="forgot-password-button" routerLink="/forgot-password"> {{ 'FORGOT_PASSWORD' | translate }}</ion-button>
        
       </ion-row>
     <ion-grid class="signin-button-grid">
       <ion-row class="ion-margin-top">
         <ion-col>
           <ion-button class="get-started-button"  (click)="onSubmit()">
-            <span>Sign In</span>
+            <span>{{ 'SIGN_IN_BUTTON' | translate }}</span>
             <div class="lines"></div>
             <div>
               <ion-icon name="arrow-forward"></ion-icon>
@@ -49,11 +54,11 @@
       <ion-row>
         <ion-col size="2"></ion-col>
         <ion-col class="ion-text-center">
-            <ion-text class="account-text">Don't have an account?</ion-text>
+            <ion-text class="account-text">{{ 'DONT_HAVE_ACCOUNT' | translate }}</ion-text>
             <ion-row>
               <ion-col size="2"></ion-col>
               <ion-col class="ion-text-center" routerLink="/sign-up">
-                <ion-text class="signup-text">Sign Up?</ion-text>
+                <ion-text class="signup-text">{{ 'SIGN_UP' | translate }}</ion-text>
                 <hr class="signup-hr"/>
               </ion-col><ion-col size="2">
               </ion-col>
