--- a/src/app/pages/setting/term-conditions/term-conditions.page.html
+++ b/src/app/pages/setting/term-conditions/term-conditions.page.html
@@ -12,7 +12,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-center" >Product Details</ion-title>
+    <ion-title class="ion-text-center">Terms & Conditions</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
