--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -9,15 +9,13 @@
       <ion-icon [name]="selectTab == 'home' ? 'home' : 'home-outline'"></ion-icon>
       <ion-label>home</ion-label>
     </ion-tab-button>
-      <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg">
-      <path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" 
-        fill="red" fill-rule="evenodd">
+    <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg">
+      <path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd">
       </path>
     </svg>
     <ion-tab-button tab="setting" class="wishlist">
       <ion-icon [name]="selectTab == 'settings' ? 'settings' : 'settings'"></ion-icon>
-     <ion-label>Setting</ion-label>
+      <ion-label>Setting</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
