--- a/src/app/auth-pages/sign-up/sign-up.page.html
+++ b/src/app/auth-pages/sign-up/sign-up.page.html
@@ -38,7 +38,7 @@
       </ion-col>
     </ion-row>
     <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('city').valid && signupForm.get('city').touched">
-      <p class="error">{{ 'ENTER_CITY_COUNTRY' | translate }}</p>
+      <p class="error" color="danger">{{ 'ENTER_CITY_COUNTRY' | translate }}</p>
     </ion-text>
 
     <ion-label>{{ 'EMAIL_ADDRESS' | translate }}</ion-label>
@@ -46,25 +46,27 @@
       <ion-input type="email" formControlName="email" required placeholder="Enter Your Email"></ion-input>
     </ion-item>
     <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">
-      <p class="error">{{ 'ENTER_VALID_EMAIL' | translate }}</p>
+      <p class="error" color="danger">{{ 'ENTER_VALID_EMAIL' | translate }}</p>
     </ion-text>
 
     <ion-label>{{ 'PASSWORD' | translate }}</ion-label>
     <ion-item lines="full">
       <ion-input type="password" formControlName="password" required placeholder="Enter Password"></ion-input>
-      <ion-icon name="eye" slot="end"></ion-icon>
+      <ion-icon (click)="onChange()" [name]="isTypePassword ? 'eye-outline' : 'eye-off-outline'" slot="end"
+      [color]="isTypePassword ? 'medium' : 'primary'"></ion-icon>
     </ion-item>
     <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">
-      <p class="error">{{ 'ENTER_VALID_PASSWORD' | translate }}</p>
+      <p class="error" color="danger">{{ 'ENTER_VALID_PASSWORD' | translate }}</p>
     </ion-text>
 
     <ion-label>{{ 'CONFIRM_PASSWORD' | translate }}</ion-label>
     <ion-item lines="full">
       <ion-input type="password" formControlName="confirmPassword" required placeholder="Confirm Password"></ion-input>
-      <ion-icon name="eye" slot="end"></ion-icon>
+      <ion-icon (click)="onChangeCofirmPassword()" [name]="isTypeConfirmPassword ? 'eye-outline' : 'eye-off-outline'" slot="end"
+      [color]="isTypeConfirmPassword ? 'medium' : 'primary'"></ion-icon>
     </ion-item>
     <ion-text class="ion-text-left" color="danger" *ngIf="!signupForm.get('confirmPassword').valid && signupForm.get('confirmPassword').touched">
-      <p class="error">{{ 'PASSWORDS_DO_NOT_MATCH' | translate }}</p>
+      <p class="error" color="danger">{{ 'PASSWORDS_DO_NOT_MATCH' | translate }}</p>
     </ion-text>
 
     <ion-grid class="signin-button-grid">
